tests/mypy/mypy_function_wrapper_fn_t3.out
tests/mypy/mypy_function_wrapper_fn_t3.py:20: error: Argument 1 to "function_wrapper" has incompatible type "Callable[[Any], Any]"; expected "Callable[[Callable[[VarArg(Never), KwArg(Never)], Never], Any, tuple[Any, ...], dict[str, Any]], Any] | Callable[[Any, Callable[[VarArg(Never), KwArg(Never)], Never], Any, tuple[Any, ...], dict[str, Any]], Any] | Callable[[type[Any], Callable[[VarArg(Never), KwArg(Never)], Never], Any, tuple[Any, ...], dict[str, Any]], Any]"  [arg-type]
tests/mypy/mypy_function_wrapper_fn_t3.py:25: error: Need type annotation for "wrapped_function"  [var-annotated]
tests/mypy/mypy_function_wrapper_fn_t3.py:25: error: Argument 1 to "__call__" of "FunctionDecorator" has incompatible type "Callable[[int, str], str]"; expected "Callable[[VarArg(Never), KwArg(Never)], Never]"  [arg-type]
Found 3 errors in 1 file (checked 1 source file)
